--- a/styles.css
+++ b/styles.css
@@ -1,103 +1,154 @@
 body {
-    margin: 20px;
-    /*
-    Challenge:
-    Find a web safe font you like, and add it 
-    to your card.
-    */
-    font-family: monospace, Helvetica, Tahoma, sans-serif;
-}
-
-.avatar {
-    width: 150px;
-    border: 5px solid #ffddd2;
-    margin-right: 10px;
-}
-
-.card {
-    width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
     text-align: center;
-    background: #83c5be;
-    color: #2b2839;
-    border-top: 5px solid #ffddd2;
-    border-left: 5px solid #ffddd2;
-    border-right: 5px solid #ffddd2;
-    border-bottom: 10px solid #006d77;
-    
-        
-    /*
-    Challenge:
-    Find a color palette you like on Coolors.co
-    and use it in your business card.
-     */
+    font-family: 'Happy Monkey', cursive;
+    background: linear-gradient(#24213d, #EFB0C9);
+    color: #ffffff;
 }
 
-.border-blue {
-    border: 1px dotted blue;
+h1, h2, h3, h4, p {
+    text-shadow: 0 0 1px black;
 }
-
-.sub-content
+nav ul
 {
-    font-size: 15px;
-    background: #2b2839;
-    border-radius: 20px;
-    padding: 5px 15px 5px 0px;
-    text-align: right;
-    color: #83c5be;
+    list-style-type: none;
+    background-color: #14213d;
+    margin: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 10px;
+}
+nav a
+{
+    text-decoration: none;
+    padding: 0 10px 0 10px;
+}
+#bff-img {
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    margin-bottom: 10px;
 }
 
-.shadow
-{
-    box-shadow: 7px 4px teal;
+#bday-age {
+    background: #eb4b98;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 5px 0 10px 0;
 }
 
-.sub-content:hover 
-{
-     background: #83c5be;
-     color: white;
-     
+#bday-date {
+    margin: 0;
+    background: #eb4b98;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
-.avatar:hover
-{
-    border: 5px solid #fff;
+#header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.circle
-{
-    height: 10px;
-    width: 10px;
-    background: #ffddd2;
+.gift-section {
+    margin-top: 50px;
+}
+
+.gift-title {
+    margin-bottom: 10px;
+}
+
+.gift-hint {
+    margin-top: 0;
+}
+
+#gift-img-cheers {
+    height: 200px;
+}
+
+.gift-img {
+    margin: 20px auto;
+    max-width: 600px;
+    height: 400px;
+    border: 6px solid white;
     border-radius: 10px;
-    margin-left: 10px;
-    animation-name: loading;
-    animation-duration: 4s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
+    background-image: url("images/gift-cover.jpg");
+    background-size: cover;
 }
 
-.load-anim
+#gift-img-gift1:hover {
+    background-image: url("images/gift1.png");
+    box-shadow: 1px 2px 20px #EFB0C9;
+}
+
+#gift-img-gift2:hover {
+    background-image: url("images/gift2.jpg");
+    box-shadow: 1px 2px 20px #EFB0C9;
+}
+
+#gift-img-gift3
 {
-     display: flex;
-    justify-content: center;
+    height: 600px;
 }
-@keyframes loading {
-  from {background-color: #ffddd2;}
-  to {background-color: #006d77;}
-}
-/*
-Stretch goals:
-Find other ways you can personalize 
-the design of yolr business card, e.g.:
-- change the border(s)
-- add border radius
-- shuffle the layout
-- shadows        🤯
-- hover effects  🤯🤯
-- animations     🤯🤯🤯
-*/
 
+#gift-img-gift3:hover {
+    background-image: url("images/gift3.jpg");
+    box-shadow: 1px 2px 20px #EFB0C9;
+}
+
+#gift-img-gift4:hover {
+    background-image: url("images/gift4.jpg");
+    box-shadow: 1px 2px 20px #EFB0C9;
+}
+
+#gift-img-gift5
+{
+    height: 500px;
+    width: 800px;
+}
+
+#gift-img-gift5:hover {
+    background-image: url("images/gift5.jpg");
+    box-shadow: 1px 2px 20px #EFB0C9;
+}
+
+#gift-img-gift6:hover {
+    background-image: url("images/gift6.jpg");
+    box-shadow: 1px 2px 20px #EFB0C9;
+}
+
+footer {
+    font-style: italic;
+    margin: 20px auto 0 auto;
+    padding: 10px 0 10px 0;
+    background: #14213d;
+}
+
+a {
+    color: white;
+}
+.content
+{
+    min-height: calc(100vh - 40px);
+}
+
+#card
+{
+    display: block;
+    background: #fff;
+    margin: 20px 60px;
+    border-radius: 30px;
+    color: #14213d;
+    padding: 10px 20px;
+    text-align: left;
+    text-shadow: 0;
+}
+
+#card-profile
+{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 4px solid #EFB0C9;
+}
